--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>ржзрзИрж░рзНржп тАФ ржмрж╛ржВрж▓рж╛ ржмрзНрж▓ржЧ</title>
+  <title>ধৈর্য</title>
 
   <!-- Bengali font (bold everywhere) -->
   <link rel="preconnect" href="https://fonts.maateen.me" crossorigin>
@@ -19,13 +19,13 @@
 <body>
   <header class="site-header">
   <div class="container">
-    <a class="brand" href="index.html" aria-label="ржзрзИрж░рзНржп тАФ Home">ржзрзИрж░рзНржп</a>
+    <a class="brand" href="index.html" aria-label="ржзрзИрж░рзНржп тАФ Home">ধৈর্য</a>
 
     <nav class="nav">
 
       <!-- Search -->
       <div class="search-wrap">
-        <button id="searchOpen" class="icon-btn" aria-label="Search">ЁЯФН</button>
+        <button id="searchOpen" class="icon-btn" aria-label="Search">🔍</button>
         <input id="searchInput" class="search-input" type="search" placeholder="ржЦрзБржБржЬрзБржитАж" autocomplete="off">
       </div>
 
@@ -40,9 +40,9 @@
   </svg>
 </button>
         <div id="menuPanel" class="menu-panel" role="menu">
-          <a role="menuitem" href="index.html">рж╣рзЛржо</a>
-          <a role="menuitem" href="index.html?view=categories">ржХрзНржпрж╛ржЯрж╛ржЧрж░рж┐</a>
-          <a role="menuitem" href="index.html?view=tags">ржЯрзНржпрж╛ржЧ</a>
+          <a role="menuitem" href="index.html">Home</a>
+          <a role="menuitem" href="index.html?view=categories">Category</a>
+          <a role="menuitem" href="index.html?view=tags">Tags</a>
           <!-- Add more items here laterтАж -->
         </div>
       </div>
@@ -60,7 +60,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <small>┬й 2025 ржзрзИрж░рзНржп,</small>
+      <small>© 2025 ধৈর্য</small>
     </div>
   </footer>
 
@@ -72,3 +72,4 @@
   </script>
 </body>
 </html>
+
