--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- Search -->
       <div class="search-wrap">
         <button id="searchOpen" class="icon-btn" aria-label="Search">🔍</button>
-        <input id="searchInput" class="search-input" type="search" placeholder="ржЦрзБржБржЬрзБржитАж" autocomplete="off">
+        <input id="searchInput" class="search-input" type="search" placeholder="Search" autocomplete="off">
       </div>
 
       <!-- Hamburger -->
@@ -72,4 +72,5 @@
   </script>
 </body>
 </html>
+
 
