--- a/post.html
+++ b/post.html
@@ -15,6 +15,15 @@
 
   <link rel="stylesheet" href="styles.css">
   <meta name="color-scheme" content="light">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2FKWKDX7KX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2FKWKDX7KX');
+</script>
 </head>
 <body>
   <header class="site-header">
@@ -78,5 +87,6 @@
   </script>
 </body>
 </html>
+
 
 
