--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
 
       <!-- Search -->
       <div class="search-wrap">
-        <button id="searchOpen" class="icon-btn" aria-label="Search">🔍</button>
-        <input id="searchInput" class="search-input" type="search" placeholder="Search" autocomplete="off">
-      </div>
+  <button id="searchOpen" class="icon-btn search-btn" aria-label="Search" title="Search">
+    <!-- minimal magnifier SVG -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <circle cx="11" cy="11" r="7"></circle>
+      <line x1="16.5" y1="16.5" x2="21" y2="21"></line>
+    </svg>
+  </button>
+  <input id="searchInput" class="search-input" type="search" placeholder="খুঁজুন…"/>
+</div>
 
       <!-- Hamburger -->
       <div class="menu">
@@ -82,6 +88,7 @@
   </script>
 </body>
 </html>
+
 
 
 
