--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <line x1="16.5" y1="16.5" x2="21" y2="21"></line>
     </svg>
   </button>
-  <input id="searchInput" class="search-input" type="search" placeholder="খুঁজুন…"/>
+  <input id="searchInput" class="search-input" type="search" placeholder="Search…" aria-label="Search" />
 </div>
 
       <!-- Hamburger -->
@@ -88,6 +88,7 @@
   </script>
 </body>
 </html>
+
 
 
 
