--- a/post.html
+++ b/post.html
@@ -40,9 +40,9 @@
             </svg>
           </button>
           <div id="menuPanel" class="menu-panel" role="menu">
-            <a role="menuitem" href="index.html">হোম</a>
-            <a role="menuitem" href="index.html?view=categories">ক্যাটাগরি</a>
-            <a role="menuitem" href="index.html?view=tags">ট্যাগ</a>
+            <a role="menuitem" href="index.html">Home</a>
+            <a role="menuitem" href="index.html?view=categories">category</a>
+            <a role="menuitem" href="index.html?view=tags">Tags</a>
           </div>
         </div>
       </nav>
@@ -85,6 +85,7 @@
   </script>
 </body>
 </html>
+
 
 
 
