--- a/post.html
+++ b/post.html
@@ -22,6 +22,7 @@
 
   gtag('config', 'G-2FKWKDX7KX');
 </script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header class="site-header">
@@ -86,6 +87,7 @@
   <script src="app.js" defer></script>
 </body>
 </html>
+
 
 
 
