--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   gtag('config', 'G-2FKWKDX7KX');
 </script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header class="site-header">
@@ -89,6 +90,7 @@
   <script src="app.js" defer></script>
 </body>
 </html>
+
 
 
 
