--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
     });
   </script>
   <script src="app.js" defer></script>
+  <!-- Scroll to top button -->
+<button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
 </body>
 </html>
+
 
 
 
