--- a/post.html
+++ b/post.html
@@ -86,8 +86,11 @@
     });
   </script>
   <script src="app.js" defer></script>
+  <!-- Scroll to top button -->
+<button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
 </body>
 </html>
+
 
 
 
