--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
       window.Blog.initHome();
     });
   </script>
-  <script src="app.js" defer></script>
-  <!-- Scroll to top button -->
+  <!-- Scroll top button -->
 <button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
+  <script src="app.js" defer></script>
 </body>
 </html>
+
 
 
 
