--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
   </script>
   <!-- Scroll top button -->
 <button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
-  <script src="app.js" defer></script>
+  <script src="app.js?v=4" defer></script>
 </body>
 </html>
+
 
 
 
