--- a/post.html
+++ b/post.html
@@ -86,9 +86,10 @@
   </script>
   <!-- Scroll to top button -->
 <button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
-<script src="app.js" defer></script>
+<script src="app.js?v=4" defer></script>
 </body>
 </html>
+
 
 
 
