--- a/post.html
+++ b/post.html
@@ -84,11 +84,10 @@
       window.Blog.initPost();
     });
   </script>
-  <!-- Scroll to top button -->
-<button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
-<script src="app.js?v=4" defer></script>
+<script src="app.js"></script>
 </body>
 </html>
+
 
 
 
