--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
       window.Blog.initHome();
     });
   </script>
-  <!-- Scroll top button -->
-<button id="scrollTopBtn" aria-label="Scroll to top">↑</button>
-  <script src="app.js?v=4" defer></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
