--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@
     });
   </script>
   <script src="app.js"></script>
+  <button id="toTop" class="to-top" aria-label="Scroll to top" title="উপরে যান">
+  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+    <polyline points="18 15 12 9 6 15"></polyline>
+  </svg>
+</button>
 </body>
 </html>
+
 
 
 
