--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
       <small>© 2025 ধৈর্য</small>
     </div>
   </footer>
-  <script src="app.js"></script>
+  <script src="app.js?v=4"></script>
 </body>
 </html>
+
 
 
 
