--- a/post.html
+++ b/post.html
@@ -77,9 +77,10 @@
       <small>© 2025 ধৈর্য</small>
     </div>
   </footer>
-  <script src="app.js?v=4"></script>
+  <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
