--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
     </div>
   </footer>
   <script src="app.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      window.Blog.initHome();
+    });
+  </script>
 </body>
 </html>
+
 
 
 
