--- a/post.html
+++ b/post.html
@@ -78,8 +78,14 @@
     </div>
   </footer>
   <script src="app.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      window.Blog.initHome();
+    });
+  </script>
 </body>
 </html>
+
 
 
 
