--- a/post.html
+++ b/post.html
@@ -80,11 +80,12 @@
   <script src="app.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      window.Blog.initHome();
+      window.Blog.initPost();
     });
   </script>
 </body>
 </html>
+
 
 
 
