--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   gtag('config', 'G-2FKWKDX7KX');
 </script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <header class="site-header">
@@ -98,6 +99,7 @@
 </script>
 </body>
 </html>
+
 
 
 
