--- a/post.html
+++ b/post.html
@@ -23,6 +23,7 @@
   gtag('config', 'G-2FKWKDX7KX');
 </script>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <header class="site-header">
@@ -97,6 +98,7 @@
   </script>
 </body>
 </html>
+
 
 
 
